@@ -45,16 +45,22 @@
 #define dev_fd      ((int)(h->priv))
 #define termset     ((struct termios *)(h->priv2))
 
+#if defined(__NetBSD__)
+#define DEVNAME "dty0"
+#else /* FreeBSD */
+#define DEVNAME "cuad"
+#endif
+
 static int gry_prepare(CableHandle *h)
 {
 	int ret;
 
 	switch(h->port)
 	{
-	case PORT_1: h->address = 0x3f8; h->device = strdup("/dev/cuad0"); break;
-	case PORT_2: h->address = 0x2f8; h->device = strdup("/dev/cuad1"); break;
-	case PORT_3: h->address = 0x3e8; h->device = strdup("/dev/cuad2"); break;
-	case PORT_4: h->address = 0x3e8; h->device = strdup("/dev/cuad3"); break;
+	case PORT_1: h->address = 0x3f8; h->device = strdup("/dev/"DEVNAME"0"); break;
+	case PORT_2: h->address = 0x2f8; h->device = strdup("/dev/"DEVNAME"1"); break;
+	case PORT_3: h->address = 0x3e8; h->device = strdup("/dev/"DEVNAME"2"); break;
+	case PORT_4: h->address = 0x3e8; h->device = strdup("/dev/"DEVNAME"3"); break;
 	default: return ERR_ILLEGAL_ARG;
 	}
 	h->priv2 = (struct termios *)calloc(1, sizeof(struct termios));
